# Learn-MCP

./: .env  .gitignore  pyproject.toml
app/: main.py  mcp_client.py  server.py  utils.py
