[project]
name = "mcp-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.51.0",
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "isort>=6.0.1",
    "mcp>=1.8.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "tool>=0.8.0",
]
